--- a/output/xhtml/dita/analysis_composite.html
+++ b/output/xhtml/dita/analysis_composite.html
@@ -10,6 +10,8 @@
 <meta name="DC.Title" content="Controlling what you view"/>
 <meta name="abstract" content="This tutorial is going to get you started with some of the analysis functionality within Debrief."/>
 <meta name="description" content="This tutorial is going to get you started with some of the analysis functionality within Debrief."/>
+<meta name="DC.Creator" content="Debrief"/>
+<meta name="DC.Publisher" content="Github John Bampton"/>
 <meta name="DC.Format" content="XHTML"/>
 <meta name="DC.Identifier" content="d2e3"/>
 <link rel="stylesheet" type="text/css" href="../commonltr.css"/>
