add more meta data

--- a/output/htmlhelp/dita/s2r_composite.html
+++ b/output/htmlhelp/dita/s2r_composite.html
@@ -9,8 +9,16 @@
 <meta name="DC.Title" content="Single Sided Reconstruction in Debrief">
 <meta name="abstract" content="Before running through this cheat-sheet, you should really have completed the A Debrief walkthrough cheat-sheet, so you know how to configure Debrief and how to load your data. If you haven't completed the Debrief walkthrough, click on Restore Welcome at the top of this window (or select Welcome from the Help menu), navigate to the Tutorials tab, and start the Debrief walkthrough.">
 <meta name="description" content="Before running through this cheat-sheet, you should really have completed the A Debrief walkthrough cheat-sheet, so you know how to configure Debrief and how to load your data. If you haven't completed the Debrief walkthrough, click on Restore Welcome at the top of this window (or select Welcome from the Help menu), navigate to the Tutorials tab, and start the Debrief walkthrough.">
+<meta name="DC.Coverage" content="Document Publishing">
+<meta name="DC.Coverage" content="Java">
+<meta name="DC.Audience.Experiencelevel" content="expert">
+<meta name="DC.Audience.Job" content="troubleshooting">
+<meta name="DC.Audience.Type" content="programmer">
+<meta name="DC.Creator" content="John Bampton">
 <meta name="DC.Creator" content="Debrief">
 <meta name="DC.Publisher" content="Github John Bampton">
+<meta name="DC.Date.Created" content="2015-10-17">
+<meta name="Publishing" content="PDF,TocJS,XHTML,DITA,HTMLhelp">
 <meta name="DC.Format" content="XHTML">
 <meta name="DC.Identifier" content="d5e3">
 <link rel="stylesheet" type="text/css" href="../commonltr.css">
