--- a/output/htmlhelp/dita/satc_composite.html
+++ b/output/htmlhelp/dita/satc_composite.html
@@ -9,8 +9,16 @@
 <meta name="DC.Title" content="Walkthrough">
 <meta name="abstract" content="Introduction This collection of cheat sheets will teach you how to use Debrief's Semi Automated Track Construction (SATC) capabilities. Tip: If you have multiple monitors, you may wish to drag out this Cheat Sheets window to give you more room for the multiple Debrief windows that you will use later on.">
 <meta name="description" content="Introduction This collection of cheat sheets will teach you how to use Debrief's Semi Automated Track Construction (SATC) capabilities. Tip: If you have multiple monitors, you may wish to drag out this Cheat Sheets window to give you more room for the multiple Debrief windows that you will use later on.">
+<meta name="DC.Coverage" content="Document Publishing">
+<meta name="DC.Coverage" content="Java">
+<meta name="DC.Audience.Experiencelevel" content="expert">
+<meta name="DC.Audience.Job" content="troubleshooting">
+<meta name="DC.Audience.Type" content="programmer">
+<meta name="DC.Creator" content="John Bampton">
 <meta name="DC.Creator" content="Debrief">
 <meta name="DC.Publisher" content="Github John Bampton">
+<meta name="DC.Date.Created" content="2015-10-17">
+<meta name="Publishing" content="PDF,TocJS,XHTML,DITA,HTMLhelp">
 <meta name="DC.Format" content="XHTML">
 <meta name="DC.Identifier" content="d6e3">
 <link rel="stylesheet" type="text/css" href="../commonltr.css">
