--- a/output/htmlhelp/dita/intro_composite.html
+++ b/output/htmlhelp/dita/intro_composite.html
@@ -9,8 +9,16 @@
 <meta name="DC.Title" content="Getting started with Debrief NG">
 <meta name="abstract" content="This series of cheatsheets will guide you through creating your Debrief working environment, customising it according to your preferred file locations, and loading some analysis data. If you wish, you can widen this 'Welcome' panel to make the tutorials easier to read. You may also find it easier to work through these cheat-sheets if you make the bottom section of this pane taller by dragging the central 'grab' bar vertically upwards">
 <meta name="description" content="This series of cheatsheets will guide you through creating your Debrief working environment, customising it according to your preferred file locations, and loading some analysis data. If you wish, you can widen this 'Welcome' panel to make the tutorials easier to read. You may also find it easier to work through these cheat-sheets if you make the bottom section of this pane taller by dragging the central 'grab' bar vertically upwards">
+<meta name="DC.Coverage" content="Document Publishing">
+<meta name="DC.Coverage" content="Java">
+<meta name="DC.Audience.Experiencelevel" content="expert">
+<meta name="DC.Audience.Job" content="troubleshooting">
+<meta name="DC.Audience.Type" content="programmer">
+<meta name="DC.Creator" content="John Bampton">
 <meta name="DC.Creator" content="Debrief">
 <meta name="DC.Publisher" content="Github John Bampton">
+<meta name="DC.Date.Created" content="2015-10-17">
+<meta name="Publishing" content="PDF,TocJS,XHTML,DITA,HTMLhelp">
 <meta name="DC.Format" content="XHTML">
 <meta name="DC.Identifier" content="d4e3">
 <link rel="stylesheet" type="text/css" href="../commonltr.css">
