--- a/output/xhtml/dita/analysis_composite.html
+++ b/output/xhtml/dita/analysis_composite.html
@@ -10,8 +10,16 @@
 <meta name="DC.Title" content="Controlling what you view"/>
 <meta name="abstract" content="This tutorial is going to get you started with some of the analysis functionality within Debrief."/>
 <meta name="description" content="This tutorial is going to get you started with some of the analysis functionality within Debrief."/>
+<meta name="DC.Coverage" content="Document Publishing"/>
+<meta name="DC.Coverage" content="Java"/>
+<meta name="DC.Audience.Experiencelevel" content="expert"/>
+<meta name="DC.Audience.Job" content="troubleshooting"/>
+<meta name="DC.Audience.Type" content="programmer"/>
+<meta name="DC.Creator" content="John Bampton"/>
 <meta name="DC.Creator" content="Debrief"/>
 <meta name="DC.Publisher" content="Github John Bampton"/>
+<meta name="DC.Date.Created" content="2015-10-17"/>
+<meta name="Publishing" content="PDF,TocJS,XHTML,DITA,HTMLhelp"/>
 <meta name="DC.Format" content="XHTML"/>
 <meta name="DC.Identifier" content="d2e3"/>
 <link rel="stylesheet" type="text/css" href="../commonltr.css"/>
