Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 </ul>
 
 <ul>
-<li>I used SaxonHE9-6-0-7J from Saxonica.</li>
+<li>I used the open source product SaxonHE9-6-0-7J from <a href="http://www.saxonica.com/welcome/welcome.xml">Saxonica</a>.</li>
 <li>This file takes as input a collection on XML files (Eclipse cheat sheets) and creates multiple output files - a parent DITA Map and some associated tasks.</li>
 <li>The "output/debrief" and sub "dita" folder contains the dynamically created (transformed) DITA files from this step. </li>
 </ul>
@@ -103,6 +103,13 @@
 <a id="git---help" class="anchor" href="#git---help" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>git --help</h4>
 
 <p>This will either print the usage of the git command if git is already installed, or trigger the Command Line Tools (OS X) for Xcode to install.</p>
+
+<p>After the Command Line Tools are installed go back to the terminal and type:</p>
+
+<h4>
+<a id="man-git" class="anchor" href="#man-git" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>man git</h4>
+
+<p><img src="documentation/images/man/man-git.png" alt="man git"></p>
 
 <h3>
 <a id="install-java" class="anchor" href="#install-java" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Install Java</h3>
@@ -336,6 +343,16 @@ DITA-OT provides that base XSL code that you 'override' with your custom work.</
 
 <h2>
 <a id="homebrew-usage" class="anchor" href="#homebrew-usage" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Homebrew usage</h2>
+
+<p><a href="http://brew.sh">Homebrew</a> is an amazing package management system that installs the stuff you need that Apple didn't.</p>
+
+<p><a href="http://brewformulas.org">Homebrew Formula</a> are written in Ruby.</p>
+
+<p>A made a <a href="https://www.youtube.com/watch?v=IonWEFStPio">video on Homebrew</a> which runs for under minute that shows the typical brew update command.</p>
+
+<p>If you install Homebrew you should try to run brew update daily.</p>
+
+<p>Once you have installed Homebrew you can run through the basic commands below.</p>
 
 <p>Open a terminal and type:</p>
 
